# learn-haskell

./: .gitignore  README.md
docs/examples/: FactFibMemo.html  FunAppMon.html  doc-index.html  examples.haddock  index.html  mini_FactFibMemo.html  mini_FunAppMon.html
docs/examples/src/: FactFibMemo.html  FunAppMon.html
examples/: README.md  examples.cabal
examples/doctest/: Main.hs
examples/src/: FactFibMemo.hs  FunAppMon.hs
gcj/: README.md  gcj.cabal
gcj/src/: GCJ.hs
hw00/: README.md  hw00.cabal
hw00/data/: hello.out.sha256
hw00/hello/: Main.hs
hw00/src/: HW00.hs
hw01/: README.md  hw01.cabal  stack.yaml
hw01/data/: validate.in  validate.out.sha256
hw01/src/: HW01.hs
hw01/validate/: Main.hs
