name:                examples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FactFibMemo, FunAppMon
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , base-prelude

test-suite doctest-exe
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , base-prelude
   , doctest
   , Glob
