name:                hw01
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW01
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable validate-exe
  hs-source-dirs:      validate
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base
   , gcj
   , hw01
